@@ -7,7 +7,8 @@ cli : new command --adapt, for automatic compression level adaptation
 api : fix : block api can be streamed with > 4 GB, reported by @catid
 api : reduced ZSTD_DDict size by 2 KB
 api : minimum negative compression level is defined, and can be queried using ZSTD_minCLevel().
-build: Reading legacy format is limited to v0.5+ by default. Can be changed at compile time using macro ZSTD_LEGACY_SUPPORT.
+build: support Haiku target, by @korli
+build: Read Legacy format is limited to v0.5+ by default. Can be changed at compile time with macro ZSTD_LEGACY_SUPPORT.
 doc : zstd_compression_format.md updated to match wording in IETF RFC 8478
 misc: tests/paramgrill, a parameter optimizer, by @GeorgeLu97
 
